--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -13,6 +13,7 @@
     --c-3F3A5A: #3f3a5a;
     --c-6D6986: #6d6986;
     --c-6A93FF: #6a93ff;
+    --c-533F56: #533f56;
     --c-8480A0: #8480a0;
     --c-EAECF3: #eaecf3;
     --c-26282D: #26282d;
@@ -140,6 +141,10 @@
     --backgroundColorF: var(--c-FAFAFF);
     --backgroundColorG: var(--c-F6F7FB);
     --backgroundColorH: var(--c-130B43);
+    /* veryLightBlue */
+    --backgroundColorProgress: #e1ebff;
+    /* lightBlue */
+    --fillColorProgress: #2e57e8;
     --borderColor1: var(--c-000000);
     --borderColor3: var(--c-26282D);
     --borderColor4: var(--c-6D6986);
@@ -252,6 +257,10 @@
     --backgroundColorE: var(--c-4A475F); /* Confirmed */
     --backgroundColorF: var(--c-191525);
     --backgroundColorG: var(--c-2F2943);
+
+    /* backgroundColorF */
+    --backgroundColorProgress: var(--c-191525);
+    --fillColorProgress: linear-gradient(to right, #2200ff 0%, #9e00ff 100%);
     --borderColor3: var(--c-8480A0);
     --borderColor5: var(--c-433F56); /* Confirmed */
     --borderColor6: var(--c-433F56);
@@ -296,6 +305,9 @@
     --light-gold-filter: invert(79%) sepia(31%) saturate(572%)
         hue-rotate(340deg) brightness(105%) contrast(101%);
     --linkColor-filter: var(--filter-7097FF);
+    /* same as light theme, but becomes black if it is missing */
+    --link-blue-filter: invert(49%) sepia(99%) saturate(6416%)
+        hue-rotate(225deg) brightness(94%) contrast(93%);
 
     @apply text-textColor5 bg-backgroundColorB;
 }
