--- a/app/css/components/track/concept-map.css
+++ b/app/css/components/track/concept-map.css
@@ -1,6 +1,6 @@
 :root {
-    --c-concept-map-background: #ffffff;
-    --c-concept-map-card-background: #ffffff;
+    --c-concept-map-background: var(--backgroundColorA);
+    --c-concept-map-card-background: var(--backgroundColorA);
 
     --c-concept-map-line-complete: #64b294;
     --c-concept-map-line-available: #dce3ef;
@@ -37,7 +37,7 @@
                 @apply text-textColor2;
                 @apply border-1 border-borderColor7;
 
-                background-color: var(--c-concept-map-card-background);
+                background-color: var(--backgroundColorA);
                 opacity: var(--c-concept-map-hover-opacity);
                 transition: opacity 200ms ease-out, box-shadow 200ms ease-out;
 
