--- a/app/css/pages/track-show.css
+++ b/app/css/pages/track-show.css
@@ -54,7 +54,7 @@
     }
     & article {
         @apply pb-80;
-        background: linear-gradient(180deg, #ffffff 80%, #fbfbff 100%);
+        /* background: linear-gradient(180deg, #ffffff 80%, #fbfbff 100%); */
     }
     & article.summary-article {
         @apply bg-backgroundColorA;
@@ -344,7 +344,7 @@
 
         & section.learning-pattern,
         & .stats-box {
-            @apply border-1 border-borderColor6 bg-white rounded-8;
+            @apply border-1 border-borderColor6 bg-backgroundColorA rounded-8;
         }
         & section.learning-pattern {
             @apply py-12 px-24 mb-40;
@@ -479,7 +479,7 @@
             }
 
             & .cta {
-                @apply bg-unnamed15 rounded-8 py-16 px-24;
+                @apply bg-backgroundColorD rounded-8 py-16 px-24;
 
                 & h3 {
                     @apply text-16 font-semibold mb-8;
