--- a/app/css/ui-kit/borders.css
+++ b/app/css/ui-kit/borders.css
@@ -4,8 +4,8 @@
         border-color: transparent;
         /* TODO: decide its lighttheme color. it was white, now it is FAFAFF */
         background-image: linear-gradient(
-                var(--backgroundColorF),
-                var(--backgroundColorF)
+                var(--backgroundColorA),
+                var(--backgroundColorA)
             ),
             linear-gradient(#2200ff, #9e00ff);
         background-origin: border-box;
@@ -30,7 +30,10 @@
     .border-gradient-lightPurple {
         border-style: solid;
         border-color: transparent;
-        background-image: linear-gradient(#fafaff, #fafaff),
+        background-image: linear-gradient(
+                var(--backgroundColorF),
+                var(--backgroundColorF)
+            ),
             linear-gradient(#2200ff, #9e00ff);
         background-origin: border-box;
         background-clip: padding-box, border-box;
