--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -26,8 +26,7 @@
     }
 
     .filter-textColor1 {
-        filter: invert(10%) sepia(35%) saturate(3157%) hue-rotate(231deg)
-            brightness(99%) contrast(113%);
+        filter: var(--textColor1-filter);
     }
 
     .filter-healthyGreen {
