--- a/app/views/tracks/community_solutions/tooltip_locked.html.haml
+++ b/app/views/tracks/community_solutions/tooltip_locked.html.haml
@@ -1,5 +1,5 @@
 .c-generic-tooltip.text-16.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
-  %p.text-lightPurple.font-semibold.mb-4
+  %p.text-textColor9.font-semibold.mb-4
     Struggling with this exercise?
 
 
