--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -89,7 +89,7 @@
         %h3.text-h4.mt-32.mb-12 From the Forum...
         .flex.flex-col.gap-8.mb-20
           - @forum_threads.each do |thread|
-            = link_to thread.url, class: 'flex items-start bg-white px-16 py-12 shadow-base hover:shadow-smZ1 rounded-5 mb-8' do
+            = link_to thread.url, class: 'flex items-start bg-backgroundColorA px-16 py-12 shadow-base hover:shadow-smZ1 rounded-5 mb-8' do
               = image_tag thread.poster_avatar_url, alt: "", role: :presentation, class: 'mr-8 h-[32px] w-[32px] rounded-circle'
               .flex.flex-col.mr-auto
                 %h5.text-h6= thread.title
