--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -93,34 +93,20 @@
 
         .ml-80{ class: 'max-w-[450px]' }
           .bg-unnamed15.rounded-8.py-16.px-24.mb-24.border-1.border-borderColor7
-            %h2.text-h4.mb-4 Upcoming Schedule
-            %p.text-p-base.mb-12.italic
+            %h2.text-h4.mb-4 Upcoming Streaming Schedule
+            %p.text-p-base.mb-12
               This schedule is regularly updated. All events will stream on our
               = link_to "Twitch Channel", 'https://twitch.tv/exercismlive', class: 'underline'
-              \- subcribe so not to miss out!
+              \- subscribe so not to miss out!
               %strong.font-semibold All times in UTC.
 
             %ul.text-p-base.list-disc.pl-16
-              %li
-                Feb 9th, 13.00.
-                Jeremie Gillet (Gleam live coding).
-              %li
-                = link_to "https://www.youtube.com/watch?v=LknqlTouTKg", class: "underline" do
-                  Feb 9th, 16.30.
-                  %strong.font-semibold{ class: "!text-lightBlue" } Interview with Jose Valim, creator of Elixir.
+              - StreamingEvent.next_5.each do |event|
+                %li.mb-4
+                  .font-medium.text-textColor6.text-14.leading-100
+                    = format_datetime(event.starts_at)
+                  %strong.font-semibold.text-textColor2= event.title
 
-              %li
-                Feb 11th, 00.00.
-                Theo Harris (Gleam live coding).
-              %li
-                Feb 16th, 13.15.
-                Aage ten Hengel (F# live coding).
-              %li
-                Feb 18th, 13.00.
-                Sergey Kuznetsov (Elixir live coding).
-              %li
-                Feb 21st, 18.30.
-                %strong.font-semibold Interview with Louis Pilfold, creator of Gleam.
 
           .bg-unnamed15.rounded-8.py-16.px-24.mb-24.border-1.border-borderColor7
             %h2.text-h4.mb-4 How does #12in23 work?
