--- a/app/css/ui-kit/borders.css
+++ b/app/css/ui-kit/borders.css
@@ -22,7 +22,10 @@
     .border-gradient-bgGray {
         border-style: solid;
         border-color: transparent;
-        background-image: linear-gradient(#fbfcfe, #fbfcfe),
+        background-image: linear-gradient(
+                var(--backgroundColorB),
+                var(--backgroundColorB)
+            ),
             linear-gradient(#2200ff, #9e00ff);
         background-origin: border-box;
         background-clip: padding-box, border-box;
