--- a/app/css/components/search-input.css
+++ b/app/css/components/search-input.css
@@ -1,5 +1,5 @@
 @layer base {
     .focused-input {
-        @apply bg-white border-lightBlue shadow-inputSelected;
+        @apply bg-backgroundColorA border-linkColor shadow-inputSelected;
     }
 }
