--- a/app/css/components/exercise-header.css
+++ b/app/css/components/exercise-header.css
@@ -2,7 +2,7 @@
 
 .c-exercise-header {
     /* is it necessary? it creates a 2px top border (site header has 1px bottom-border)
-    while has a 1px bottom border
+    while it has a 1px bottom border
     which looks a bit disturbing
     */
     /* @apply border-t-1 border-color22; */
