--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -77,7 +77,7 @@
               = link_to "YouTube", "https://www.youtube.com/watch?v=#{@live_event.youtube_id}"
             👇🏽
 
-          .rounded-8.shadow-baseZ1.w-fill
+          .rounded-8.shadow-baseZ1.w-fill.overflow-hidden
             - if @live_event.youtube?
               .c-youtube-container
                 %iframe{ width: "560", height: "315", src: "https://www.youtube-nocookie.com/embed/#{@live_event.youtube_id}", title: "YouTube video player", frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
