--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -62,7 +62,7 @@
 
       %section.info-section.pt-48.lg:pt-0
         %h2.text-h2.mb-32 Here&apos;s what you can do to support us.
-        .flex.flex-row.shadow-baseZ1.p-24.rounded-16.bg-white.mb-16.border-2.border-gradient.relative
+        .flex.flex-row.shadow-baseZ1.p-24.rounded-16.bg-backgroundColorA.mb-16.border-2.border-gradient.relative
           = graphical_icon "money-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
             .text-h4.mb-4 Donate
@@ -74,7 +74,7 @@
           .hidden.lg:flex.self-center.absolute{ class: 'text-[70px] right-[-40px]' }
             👉🏼
 
-        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+        .flex.flex-row.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
           = graphical_icon "organisation-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
             .text-h4.mb-4 Get your company involved
@@ -84,7 +84,7 @@
               = link_to "fundraising@exercism.org", "mailto:fundraising@exercism.org", class: "text-lightBlue font-medium underline"
               and we'll explore further!
 
-        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+        .flex.flex-row.shadow-base.p-24.rounded-16.bg-backgroundColorA.mb-16
           = graphical_icon "social-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
             .text-h4.mb-4 Love Exercism? Tell others about us!
