Automation modal, Profile

--- a/app/css/components/markdown-editor.css
+++ b/app/css/components/markdown-editor.css
@@ -77,6 +77,7 @@
 
             border: none;
             @apply font-mono;
+            @apply bg-backgroundColorA;
             @apply text-textColor3 text-15 leading-huge;
             @apply pt-12 pb-0 px-16;
 
