--- a/app/css/pages/settings.css
+++ b/app/css/pages/settings.css
@@ -18,7 +18,7 @@
             @apply mb-8;
         }
         & a {
-            @apply text-lightBlue;
+            @apply text-linkColor;
         }
     }
     & article {
@@ -163,8 +163,8 @@
         }
 
         & .testimonial {
-            @apply border-2 border-veryLightBlue2;
-            @apply bg-lightPurple rounded-8;
+            @apply border-2 border-backgroundColorI;
+            @apply bg-backgroundColorF rounded-8;
             @apply rounded-8;
 
             & .text {
@@ -184,7 +184,7 @@
             }
 
             & .commonly-used {
-                @apply bg-veryLightBlue2;
+                @apply bg-backgroundColorI;
                 @apply py-12 px-24;
                 @apply flex items-center justify-center;
                 & .info {
@@ -193,7 +193,7 @@
                 }
                 & button {
                     @apply text-white font-semibold;
-                    @apply bg-lightBlue rounded-100;
+                    @apply bg-linkColor rounded-100;
                     height: 28px;
                     @apply px-10;
                     white-space: nowrap;
@@ -269,9 +269,9 @@
         @apply flex items-start;
         @apply border-2 rounded-8;
         @apply py-20 px-24;
-        @apply bg-lightPurple;
+        @apply bg-backgroundColorF;
         /* TODO */
-        border-color: blue;
+        @apply border-gradient;
         & > .c-icon {
             height: 128px;
             width: 128px;
